--- a/api/pom.xml
+++ b/api/pom.xml
@@ -115,6 +115,18 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.49</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.33</version>
+		</dependency>
+		
+		<dependency>
 			 <groupId>commons-fileupload</groupId>
 			 <artifactId>commons-fileupload</artifactId>
 			 <version>1.3.1</version>
